--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <packaging>jar</packaging>
 
   <groupId>runt0</groupId>
   <artifactId>woodpecker-box</artifactId>
@@ -77,7 +78,7 @@
       <artifactId>jmg-sdk</artifactId>
       <version>1.0.8</version>
       <scope>system</scope>
-      <systemPath>${project.basedir}/lib/jmg-sdk-1.0.8.jar</systemPath>
+      <systemPath>${pom.basedir}/lib/jmg-sdk-1.0.8.jar</systemPath>
     </dependency>
 
     <dependency>
@@ -85,7 +86,7 @@
       <artifactId>marshalsec-for-woodpecker</artifactId>
       <version>0.1.0</version>
       <scope>system</scope>
-      <systemPath>${project.basedir}/lib/marshalsec-for-woodpecker-0.1.0.jar</systemPath>
+      <systemPath>${pom.basedir}/lib/marshalsec-for-woodpecker-0.1.0.jar</systemPath>
     </dependency>
 
     <dependency>
@@ -93,7 +94,7 @@
       <artifactId>ysoserial-for-woodpecker</artifactId>
       <version>0.5.2</version>
       <scope>system</scope>
-      <systemPath>${project.basedir}/lib/ysoserial-for-woodpecker-0.5.2.jar</systemPath>
+      <systemPath>${pom.basedir}/lib/ysoserial-for-woodpecker-0.5.2.jar</systemPath>
     </dependency>
   </dependencies>
 
